<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FS</string>
    <string name="action_settings">Settings</string>
    <string name="background">Background</string>
    <string name="capital">Capital:</string>
    <string name="coach">Coach:</string>
    <string name="connection_error">URL error</string>
    <string name="fifa_ranking">Fifa ranking:</string>
    <string name="fifa_registry">Fifa registration:</string>
    <string name="flag">Flag</string>
    <string name="foundation_year">Foundation:</string>
    <string name="groups">Groups</string>
    <string name="info">Information</string>
    <string name="language">Language:</string>
    <string name="next">Next</string>
    <string name="nickname">Nickname:</string>
    <string name="previous">Previous</string>
    <string name="schedule">Schedule</string>
    <string name="teams">Teams</string>
    <string name="tournament">Tournament</string>
    <string name="xml_error">XML error</string>

</resources>
